# mango

doc/: Doxyfile  instructions.txt
doc/source/: build-products.rst  build-source-osx.rst  build-source-windows.rst  conf.py
doc/source/_theme/mango1/: layout.html
doc/source/cpp/: extending-mango-os-layers.rst  extending-mangopy.rst  mango-modular-design.rst  rapid-simulation-development.rst
doc/source/sample-code/solids/: pysolids.cpp  pytetrahedron.h  tetrahedron.h
doc/source/setup/: dependencies-versions.rst  linux.rst  osx.rst  uninstall.rst  windows.rst
include/: MangoConfig.h
include/mango/mangopy/: mangopy_python.h
installers/win/: makefile  mango-setup.nsi
samples/: CMakeLists.txt
src/: CMakeLists.txt  MangoConfig.h.in  mango.cpp
src/mangopy/: mangopy.cpp
src/mangopy_on_glut/: mangopy_on_glut.cpp
